Created a template and a README

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <body>
     <!-- nav bar and title -->
     <h1>Jamie Metcalfe</h1>
-      <nav></nav>
+      <nav>About
+           Projects
+           Designs
+           Contact</nav>
     <!-- intro and image -->
-      <p>Hi, I'm Jamie! I am a web developer! I mainly use HTML, CSS, AND Javascript I love to learn and experement with new things, and to test my skills!</p>
+      <p>Hi, I'm Jamie! I am a self taught web developer! I mainly use HTML, CSS, AND Javascript I love to learn and experement with new things, and to test my skills!</p>
+      <img></img>
+
+    
     
     <script src="script.js"></script>
   </body>
