--- a/template.html
+++ b/template.html
@@ -9,10 +9,15 @@
   <body>
     <!-- nav bar and title -->
     <h1>Jamie Metcalfe</h1>
-      <nav></nav>
-    <!-- Text-->
+      <nav>About
+           Projects
+           Designs
+           Contact</nav>
+    <!-- blah blah underneath --> 
     
     <script src="script.js"></script>
   </body>
-  <footer></footer>
+  <footer>
+    
+  </footer>
 </html>
