--- a/template.html
+++ b/template.html
@@ -21,3 +21,11 @@
     
   </footer>
 </html>
+
+
+<!--
+urls and stuff:
+github: https://github.com/jamiemetcalfe18/
+linkedin: https://www.linkedin.com/in/jmetcalfe18/
+twitter: https://twitter.com/j_metcalfe18
+-->
