added font and set up nav bar

--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Jamie's Portfolio!</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- nav bar and title -->
+    <nav>
     <h1>Jamie Metcalfe</h1>
-      <nav>About
-           Projects
-           Designs
-           Contact</nav>
+        <ul>
+          <li class="links">
+          <a href=".">About</a>
+          <a href=".">Projects</a>
+          <a href=".">Designs</a>
+          <a href=".">Contact</a>
+          </li>
+        </ul>
+    </nav>
+
+    
     <!-- intro and image -->
-      <p>Hi, I'm Jamie! I am a self taught web developer! I mainly use HTML, CSS, AND Javascript I love to learn and experement with new things, and to test my skills!</p>
+      <p>Hi, I'm Jamie! I am a self taught web developer! I mainly use HTML, CSS, and Javascript I love to learn and experement with new things, and to test my skills!</p>
       <img></img>
 
     
