--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <p>Hi, I'm Jamie! I am a self taught web developer! I mainly use HTML, CSS, and Javascript I love to learn and experement with new things, and to test my skills!</p>
       <img></img>
 
+    <!-- additional about me -->
+    <p>In addition to coding, I also enjoy photography and graphic design! I love learning and spend about an hour everyday twords learning something new.</p>
     
     
     <script src="script.js"></script>
