fleshed out html for pages more

--- a/pages/template.html
+++ b/pages/template.html
@@ -32,8 +32,16 @@
     
     <script src="script.js"></script>
   </body>
-  <footer>
-    
+
+    <footer>
+    <p>Design and image credits to Jamie Metcalfe 2022. Logo by insert link to mandas stuff here.</p>
+    <p>Check out my socials!</p>
+          <li>
+              <ul>Github</ul>
+              <ul>Twitter</ul>
+              <ul>Linked-in</ul>
+              <ul>Behance</ul>
+          </li>
   </footer>
 </html>
 
