--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     
     <title>Jamie's Portfolio</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="/style.css" rel="stylesheet" type="text/css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,10 +20,10 @@
     <h1>Jamie Metcalfe</h1>
         <ul>
           <li class="links">
-          <a href=".">About</a>
-          <a href=".">Projects</a>
-          <a href=".">Designs</a>
-          <a href=".">Contact</a>
+            <a href="/pages/about.html">About</a>
+            <a href="/pages/projects.html">Projects</a>
+            <a href="/pages/designs.html">Designs</a>
+            <a href="/pages/contact.html">Contact</a>
           </li>
         </ul>
     </nav>
